src/objects/LoadingGroup__c.object
<CustomObject>
    <description>SFDC1-2462 Loading Group related to product. To be maintained by Vanguard product management process</description>
    <fields>
        <fullName>DeliveryTeam__c</fullName>
        <description>SFDC1-6249 This field is to carry loading group so cases get sent to the correct Delivery teams when an opportunity is closed</description>
        <label>Delivery Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroupCategory__c</fullName>
        <description>SFDC1-6976: A new field to store Loading Group Category</description>
        <label>Loading Group Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoadingGroupNumber__c</fullName>
        <description>SFDC1-6246 Loading Group Number. Populated via SAP integration.
SFDC1-6249 This field is to carry loading group so cases get sent to the correct Delivery teams when an opportunity is closed</description>
        <label>Loading Group Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Loading Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LoadingGroupCategory__c</columns>
        <columns>LoadingGroupNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Loading Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loading Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>